remove of row name

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <th>piano 10</th>
     
                 <tr>
-                    <th align="left"> p237</th>
+                    <th align="left"></th>
     
                     <td><audio controls style="width: 150px;">
                             <source src="files/piano_models/demo_akkord_m1.wav" type="audio/flac">
