add of block diagram of the piano model

--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
         <br>
 
     </p>
+     <img src="files/pianoModelOverview.png" alt="Block diagram of the piano model from [1]" width="1500px">
+
     <font size="2">
         [1] L. Renault, R. Mignot, and A. Roebel, “Differentiable Piano Model for
         MIDI-to-Audio Performance Synthesis,” Sep. 2022, publisher: <a href="https://zenodo.org/records/7092602">Differentiable Piano Model</a> <br>
     </font>
 
-    <h3>Different piano models</h3>
+    <h3>z-Vector - Different piano models</h3>
     <p>
         The first section gives an impression of the 10 different pianos which are available with a simple c major chord.
     </p>
