add of audio examples for piano model 7 for different pedals

--- a/index.html
+++ b/index.html
@@ -145,6 +145,22 @@
                 </tr>
 
                 <tr>
+                    <th align="left">piano model 7</th>
+    
+                    <td><audio controls style="width: 150px;">
+                            <source src="files/context_vector/Four_Notes_m7.wav" type="audio/flac">
+                        </audio></td>
+                    <td><audio controls style="width: 150px;">
+                            <source src="files/context_vector/Four_Notes_pedal_soft_m7.wav" type="audio/flac">
+                        </audio></td>
+                    <td><audio controls style="width: 150px;">
+                            <source src="files/context_vector/Four_Notes_pedal_hold_m7.wav" type="audio/flac">
+                        </audio></td>
+                    <!-- <td style="background-color: grey;"><audio controls style="width: 130px;">
+                            <source src="rendered/p229_var16bit_finetuned.flac" type="audio/flac"> -->
+                </tr>
+
+                <tr>
                     <th align="left">piano model 8</th>
     
                     <td><audio controls style="width: 150px;">
