add of JBS audio sample

--- a/index.html
+++ b/index.html
@@ -298,6 +298,9 @@
                     <td><audio controls style="width: 250px;">
                             <source src="files/explorationell_study/inharm_detuning/Maestro_midi2_inharm_250.wav" type="audio/flac">
                         </audio></td>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/explorationell_study/inharm_detuning/JBS_Fuge_ref_inharm_250.wav" type="audio/flac">
+                        </audio></td>
                 </tr>
 
                 <tr>
@@ -311,6 +314,9 @@
                     <td><audio controls style="width: 250px;">
                             <source src="files/explorationell_study/inharm_detuning/Maestro_midi2_inharm_500.wav" type="audio/flac">
                         </audio></td>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/explorationell_study/inharm_detuning/JBS_Fuge_ref_inharm_500.wav" type="audio/flac">
+                        </audio></td>
                 </tr>
 
                 <tr>
@@ -323,6 +329,9 @@
                         </audio></td>
                     <td><audio controls style="width: 250px;">
                             <source src="files/explorationell_study/inharm_detuning/Maestro_midi2_detuning_2000000.wav" type="audio/flac">
+                        </audio></td>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/explorationell_study/inharm_detuning/JBS_Fuge_ref_detuning_2000000.wav" type="audio/flac">
                         </audio></td>
                 </tr>
             </tr>
