--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                             <source src="files/outDistribution/Cuvilier.wav" type="audio/flac">
                         </audio></td>
                     <td><audio controls style="width: 250px;">
-                            <source src="files/outDistribution/Friml.wav.wav" type="audio/flac">
+                            <source src="files/outDistribution/Friml.wav" type="audio/flac">
                         </audio></td>
                 </tr>
 
