change of Schumann GT

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                 <tr>
                     <th align="left" , style="padding-right:20px;"> Ground Truth</th>
                     <td><audio controls style="width: 250px;">
-                            <source src="files/explorationell_study/inharm_detuning/KK_Schumann_groundtruth.mp3" type="audio/flac">
+                            <source src="files/explorationell_study/Schumann_GT.wav" type="audio/flac">
                         </audio></td>
                     <td><audio controls style="width: 250px;">
                             <source src="files/explorationell_study/Schubert_GT.wav" type="audio/flac">
