--- a/index.html
+++ b/index.html
@@ -351,6 +351,8 @@
                 <th>Märchenbilder, Korngold</th>
                 <th>Hesitation waltz, Cuvillier </th>
                 <th>Indian love call, Friml </th>
+                <th>Bartok</th>
+                
 
 
                 <tr>
@@ -364,6 +366,9 @@
                     <td><audio controls style="width: 250px;">
                             <source src="files/outDistribution/Friml.mp3" type="audio/flac">
                         </audio></td>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/outDistribution/Bartok_GT.wav" type="audio/flac">
+                        </audio></td>
                 </tr>
 
                 <tr>
@@ -376,6 +381,9 @@
                         </audio></td>
                     <td><audio controls style="width: 250px;">
                             <source src="files/outDistribution/Friml.wav" type="audio/flac">
+                        </audio></td>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/outDistribution/Bartok_syn.wav" type="audio/flac">
                         </audio></td>
                 </tr>
 
