--- a/index.html
+++ b/index.html
@@ -261,10 +261,10 @@
         <table>
             <tr>
                 <th></th>
-                <th>Klavierkonzert op.54 R. - Schumann<sup>[4]sup></th>
-                <th>Wanderer Fantasie op.15 - F. Schubert<sup>[4]sup></th>
-                <th>Concert suite of "The Nutcracker" - P.I. Tchaikovsky<sup>[4]sup></th>
-                <th>Prelude and Fugue in , BWV 848 - J.S. Bach<sup>[4]sup></th>
+                <th>Klavierkonzert op.54 R. - Schumann<sup>[4]></th>
+                <th>Wanderer Fantasie op.15 - F. Schubert<sup>[4]></th>
+                <th>Concert suite of "The Nutcracker" - P.I. Tchaikovsky<sup>[4]></th>
+                <th>Prelude and Fugue in , BWV 848 - J.S. Bach<sup>[4]></th>
 
 
                 <tr>
@@ -344,10 +344,10 @@
         <table>
             <tr>
                 <th></th>
-                <th>Märchenbilder, Korngold<sup>[2]sup></th>
-                <th>Hesitation waltz, Cuvillier<sup>[2]sup> </th>
-                <th>Indian love call, Friml<sup>[2]sup> </th>
-                <th>Sonata Sz.80 Bartok<sup>[3]sup></th>
+                <th>Märchenbilder, Korngold<sup>[2]></th>
+                <th>Hesitation waltz, Cuvillier<sup>[2]> </th>
+                <th>Indian love call, Friml<sup>[2]> </th>
+                <th>Sonata Sz.80 Bartok<sup>[3]></th>
                 
 
 
@@ -393,17 +393,14 @@
         [1] L. Renault, R. Mignot, and A. Roebel, “Differentiable Piano Model for
         MIDI-to-Audio Performance Synthesis,” Sep. 2022, publisher: <a href="https://zenodo.org/records/7092602">Differentiable Piano Model</a> <br>
         [2] Zhengshan Shi, Craig Stuart Sapp, Kumaran Arul, Jerry McBride, Julius O. Smith III. 
-        SUPRA: Digitizing the Stanford University Piano Roll Archive. In Proc. of the 20th Int. Soc. for Music Information Retrieval 
+        SUPRA: Digitizing the Stanford University Piano Roll Archive. In Proc. of the 20th Int. Soc. for Music Information Retrieval <br>
         [3] Meinard Müller, Verena Konz, Wolfgang Bogler, Vlora Arifi-Müller: Saarland Music Data (SMD). 
-        In Late-Breaking and Demo Session of the 12th International Conference on Music Information Retrieval (ISMIR), 2011. 
+        In Late-Breaking and Demo Session of the 12th International Conference on Music Information Retrieval (ISMIR), 2011. <br>
         [4] C. Hawthorne, A. Stasyuk, A. Roberts, I. Simon, C.-Z. A. Huang, S. Dieleman, E. Elsen, J. Engel, and D. Eck, 
         “Enabling factorized piano music modeling and generation with the MAESTRO dataset,” in International Conference on Learning Representations, 2019. 
-        [Online]. Available: <a href="https://openreview.net/forum?id=r1lYRjC9F7">MAESTRO dataset</a>
+        [Online]. Available: <a href="https://openreview.net/forum?id=r1lYRjC9F7">MAESTRO dataset</a><br>
     </font>
 
-    Zhengshan Shi, Craig Stuart Sapp, Kumaran Arul, Jerry McBride, Julius O. Smith III. 
-SUPRA: Digitizing the Stanford University Piano Roll Archive.
-In Proc. of the 20th Int. Soc. for Music Information Retrieval 
 <!-- 
     <h3>Deep Filter Net applied to white guassian noise speech samples, with 20dB SNR, and synthesized with different vocoders</h3>
 
