--- a/index.html
+++ b/index.html
@@ -261,10 +261,10 @@
         <table>
             <tr>
                 <th></th>
-                <th>Klavierkonzert op.54 R. - Schumann<sup>[4]></th>
-                <th>Wanderer Fantasie op.15 - F. Schubert<sup>[4]></th>
-                <th>Concert suite of "The Nutcracker" - P.I. Tchaikovsky<sup>[4]></th>
-                <th>Prelude and Fugue in , BWV 848 - J.S. Bach<sup>[4]></th>
+                <th>Klavierkonzert op.54 R. - Schumann<sup>[4]</th>
+                <th>Wanderer Fantasie op.15 - F. Schubert<sup>[4]</th>
+                <th>Concert suite of "The Nutcracker" - P.I. Tchaikovsky<sup>[4]</th>
+                <th>Prelude and Fugue in , BWV 848 - J.S. Bach<sup>[4]</th>
 
 
                 <tr>
@@ -344,10 +344,10 @@
         <table>
             <tr>
                 <th></th>
-                <th>Märchenbilder, Korngold<sup>[2]></th>
-                <th>Hesitation waltz, Cuvillier<sup>[2]> </th>
-                <th>Indian love call, Friml<sup>[2]> </th>
-                <th>Sonata Sz.80 Bartok<sup>[3]></th>
+                <th>Märchenbilder, Korngold<sup>[2]</th>
+                <th>Hesitation waltz, Cuvillier<sup>[2]</th>
+                <th>Indian love call, Friml<sup>[2]</th>
+                <th>Sonata Sz.80 Bartok<sup>[3]</th>
                 
 
 
