add files for modifying context vector with PCA component.

--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
         <table>
             <tr>
                 <th></th>
-                <th>plus PCA vector</th>
-                <th>minus PCA vector </th>
+                <th>plus PCA component vector</th>
+                <th>minus PCA component vector </th>
 
 
                 <tr>
@@ -328,6 +328,122 @@
                         </audio></td>
                     <td><audio controls style="width: 250px;">
                             <source src="files/explorationell_study/inharm_detuning/JBS_Fuge_ref_detuning_2000000.wav" type="audio/flac">
+                        </audio></td>
+                </tr>
+            </tr>
+
+        </table>
+    </font>
+
+
+    <p>
+        Modification of context vector bla bla 
+    </p>
+
+    <font size="2">
+        <table>
+            <tr>
+                <th>plus $10\cdot$ PCA component vector</th>
+                <th>minus $10\cdot$ PCA component vector</th>
+
+
+                <tr>
+                    <th align="left" , style="padding-right:20px;"> 1st PCA component </th>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/Context_addsub_pca_22pieces/MIDI-Unprocessed_24_R1_2011_MID--AUDIO_R1-D9_08_Track08_wav_contextpca22pieces_0_amp10.wav" type="audio/flac">
+                        </audio></td>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/Context_addsub_pca_22pieces/MIDI-Unprocessed_24_R1_2011_MID--AUDIO_R1-D9_08_Track08_wav_contextpca22pieces_0_amp-10.wav" type="audio/flac">
+                        </audio></td>
+                </tr>
+
+                <tr>
+                    <th align="left" , style="padding-right:20px;">  2nd PCA component</th>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/Context_addsub_pca_22pieces/MIDI-Unprocessed_24_R1_2011_MID--AUDIO_R1-D9_08_Track08_wav_contextpca22pieces_1_amp10.wav" type="audio/flac">
+                        </audio></td>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/Context_addsub_pca_22pieces/MIDI-Unprocessed_24_R1_2011_MID--AUDIO_R1-D9_08_Track08_wav_contextpca22pieces_1_amp-10.wav" type="audio/flac">
+                        </audio></td>
+                </tr>
+
+                <tr>
+                    <th align="left" , style="padding-right:20px;"> 3rd PCA component </th>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/Context_addsub_pca_22pieces/MIDI-Unprocessed_24_R1_2011_MID--AUDIO_R1-D9_08_Track08_wav_contextpca22pieces_2_amp10.wav" type="audio/flac">
+                        </audio></td>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/Context_addsub_pca_22pieces/MIDI-Unprocessed_24_R1_2011_MID--AUDIO_R1-D9_08_Track08_wav_contextpca22pieces_2_amp-10.wav" type="audio/flac">
+                        </audio></td>
+                </tr>
+
+                <tr>
+                    <th align="left" , style="padding-right:20px;">  4th PCA component</th>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/Context_addsub_pca_22pieces/MIDI-Unprocessed_24_R1_2011_MID--AUDIO_R1-D9_08_Track08_wav_contextpca22pieces_3_amp10.wav" type="audio/flac">
+                        </audio></td>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/Context_addsub_pca_22pieces/MIDI-Unprocessed_24_R1_2011_MID--AUDIO_R1-D9_08_Track08_wav_contextpca22pieces_3_amp-10.wav" type="audio/flac">
+                        </audio></td>
+                </tr>
+
+                <tr>
+                    <th align="left" , style="padding-right:20px;"> 5th PCA component </th>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/Context_addsub_pca_22pieces/MIDI-Unprocessed_24_R1_2011_MID--AUDIO_R1-D9_08_Track08_wav_contextpca22pieces_4_amp10.wav" type="audio/flac">
+                        </audio></td>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/Context_addsub_pca_22pieces/MIDI-Unprocessed_24_R1_2011_MID--AUDIO_R1-D9_08_Track08_wav_contextpca22pieces_4_amp-10.wav" type="audio/flac">
+                        </audio></td>
+                </tr>
+
+                <tr>
+                    <th align="left" , style="padding-right:20px;">  6th PCA component</th>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/Context_addsub_pca_22pieces/MIDI-Unprocessed_24_R1_2011_MID--AUDIO_R1-D9_08_Track08_wav_contextpca22pieces_5_amp10.wav" type="audio/flac">
+                        </audio></td>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/Context_addsub_pca_22pieces/MIDI-Unprocessed_24_R1_2011_MID--AUDIO_R1-D9_08_Track08_wav_contextpca22pieces_5_amp-10.wav" type="audio/flac">
+                        </audio></td>
+                </tr>
+
+                <tr>
+                    <th align="left" , style="padding-right:20px;"> 7th PCA component </th>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/Context_addsub_pca_22pieces/MIDI-Unprocessed_24_R1_2011_MID--AUDIO_R1-D9_08_Track08_wav_contextpca22pieces_6_amp10.wav" type="audio/flac">
+                        </audio></td>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/Context_addsub_pca_22pieces/MIDI-Unprocessed_24_R1_2011_MID--AUDIO_R1-D9_08_Track08_wav_contextpca22pieces_6_amp-10.wav" type="audio/flac">
+                        </audio></td>
+                </tr>
+
+                <tr>
+                    <th align="left" , style="padding-right:20px;">  8th PCA component</th>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/Context_addsub_pca_22pieces/MIDI-Unprocessed_24_R1_2011_MID--AUDIO_R1-D9_08_Track08_wav_contextpca22pieces_7_amp10.wav" type="audio/flac">
+                        </audio></td>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/Context_addsub_pca_22pieces/MIDI-Unprocessed_24_R1_2011_MID--AUDIO_R1-D9_08_Track08_wav_contextpca22pieces_7_amp-10.wav" type="audio/flac">
+                        </audio></td>
+                </tr>
+
+                <tr>
+                    <th align="left" , style="padding-right:20px;"> 9th PCA component </th>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/Context_addsub_pca_22pieces/MIDI-Unprocessed_24_R1_2011_MID--AUDIO_R1-D9_08_Track08_wav_contextpca22pieces_8_amp10.wav" type="audio/flac">
+                        </audio></td>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/Context_addsub_pca_22pieces/MIDI-Unprocessed_24_R1_2011_MID--AUDIO_R1-D9_08_Track08_wav_contextpca22pieces_8_amp-10.wav" type="audio/flac">
+                        </audio></td>
+                </tr>
+
+                <tr>
+                    <th align="left" , style="padding-right:20px;">  10th PCA component</th>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/Context_addsub_pca_22pieces/MIDI-Unprocessed_24_R1_2011_MID--AUDIO_R1-D9_08_Track08_wav_contextpca22pieces_9_amp10.wav" type="audio/flac">
+                        </audio></td>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/Context_addsub_pca_22pieces/MIDI-Unprocessed_24_R1_2011_MID--AUDIO_R1-D9_08_Track08_wav_contextpca22pieces_9_amp-10.wav" type="audio/flac">
                         </audio></td>
                 </tr>
             </tr>
