--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
     </font>
 
     <p>
-        In the next examples we changed the global inharmonicity and the global detuning.
+        In the next samples, we changed the global inharmonicity and the global detuning.
     </p>
 
     <font size="2">
@@ -335,17 +335,95 @@
         </table>
     </font>
 
+    <p>
+        Modification of context vector by setting each component of the context vector either to +10 or -10.
+    </p>
+
+    <font size="2">
+        <table>
+            <tr>
+                <th>context dimension</th>
+                <th>1</tr>
+                <th>2</th>
+                <th>3</tr>
+                <th>4</th>
+                <th>5</tr>
+                <th>6</th>
+                <th>7</tr>
+                <th>8</th>
+
+
+                <tr>
+                    <th align="left" , style="padding-right:20px;"> 10 </th>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/Context_set10_-10/MIDI-Unprocessed_24_R1_2011_MID--AUDIO_R1-D9_08_Track08_wav_contextdim0_value10.wav" type="audio/flac">
+                        </audio></td>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/Context_set10_-10/MIDI-Unprocessed_24_R1_2011_MID--AUDIO_R1-D9_08_Track08_wav_contextdim1_value10.wav" type="audio/flac">
+                        </audio></td>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/Context_set10_-10/MIDI-Unprocessed_24_R1_2011_MID--AUDIO_R1-D9_08_Track08_wav_contextdim2_value10.wav" type="audio/flac">
+                        </audio></td>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/Context_set10_-10/MIDI-Unprocessed_24_R1_2011_MID--AUDIO_R1-D9_08_Track08_wav_contextdim3_value10.wav" type="audio/flac">
+                        </audio></td>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/Context_set10_-10/MIDI-Unprocessed_24_R1_2011_MID--AUDIO_R1-D9_08_Track08_wav_contextdim4_value10.wav" type="audio/flac">
+                        </audio></td>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/Context_set10_-10/MIDI-Unprocessed_24_R1_2011_MID--AUDIO_R1-D9_08_Track08_wav_contextdim5_value10.wav" type="audio/flac">
+                        </audio></td>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/Context_set10_-10/MIDI-Unprocessed_24_R1_2011_MID--AUDIO_R1-D9_08_Track08_wav_contextdim6_value10.wav" type="audio/flac">
+                        </audio></td>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/Context_set10_-10/MIDI-Unprocessed_24_R1_2011_MID--AUDIO_R1-D9_08_Track08_wav_contextdim7_value10.wav" type="audio/flac">
+                        </audio></td>
+                </tr>
+
+                <tr>
+                    <th align="left" , style="padding-right:20px;">  -10 </th>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/Context_set10_-10/MIDI-Unprocessed_24_R1_2011_MID--AUDIO_R1-D9_08_Track08_wav_contextdim0_value-10.wav" type="audio/flac">
+                        </audio></td>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/Context_set10_-10/MIDI-Unprocessed_24_R1_2011_MID--AUDIO_R1-D9_08_Track08_wav_contextdim1_value-10.wav" type="audio/flac">
+                        </audio></td>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/Context_set10_-10/MIDI-Unprocessed_24_R1_2011_MID--AUDIO_R1-D9_08_Track08_wav_contextdim2_value-10.wav" type="audio/flac">
+                        </audio></td>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/Context_set10_-10/MIDI-Unprocessed_24_R1_2011_MID--AUDIO_R1-D9_08_Track08_wav_contextdim3_value-10.wav" type="audio/flac">
+                        </audio></td>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/Context_set10_-10/MIDI-Unprocessed_24_R1_2011_MID--AUDIO_R1-D9_08_Track08_wav_contextdim4_value-10.wav" type="audio/flac">
+                        </audio></td>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/Context_set10_-10/MIDI-Unprocessed_24_R1_2011_MID--AUDIO_R1-D9_08_Track08_wav_contextdim5_value-10.wav" type="audio/flac">
+                        </audio></td>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/Context_set10_-10/MIDI-Unprocessed_24_R1_2011_MID--AUDIO_R1-D9_08_Track08_wav_contextdim6_value-10.wav" type="audio/flac">
+                        </audio></td>
+                    <td><audio controls style="width: 250px;">
+                            <source src="files/Context_set10_-10/MIDI-Unprocessed_24_R1_2011_MID--AUDIO_R1-D9_08_Track08_wav_contextdim7_value-10.wav" type="audio/flac">
+                        </audio></td>
+                </tr>
+            </tr>
+
+        </table>
+    </font>
+
 
     <p>
-        Modification of context vector bla bla 
+        Modification of context vector by adding or subtracting the particular PCA component 
     </p>
 
     <font size="2">
         <table>
             <tr>
                 <th></th>
-                <th>plus $10 \cdot $ PCA component vector</th>
-                <th>minus $10 \cdot $ PCA component vector</th>
+                <th>plus $$10 \cdot $$ PCA component vector</th>
+                <th>minus $$10 \cdot $$ PCA component vector</th>
 
 
                 <tr>
