--- a/index.html
+++ b/index.html
@@ -952,8 +952,8 @@
         <table>
             <tr>
                 <th></th>
-                <th>plus $$10 \cdot $$ PCA component vector</th>
-                <th>minus $$10 \cdot $$ PCA component vector</th>
+                <th>plus 10*PCA component vector</th>
+                <th>minus 10*PCA component vector</th>
 
 
                 <tr>
